force-app/main/default/objects/SPEN_Condition__c/SPEN_Condition__c.object-meta.xml
<CustomObject>
    <description>This object is created to capture condition information and send it for SAP sync</description>
    <label>Condition</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Condition</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>