force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Annual_Contract_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Annual_Contract_Payment_Id__c</fullName>
    <label>Annual Contract Payment Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>