force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Apparatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Apparatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apparatus</label>
    <referenceTo>SPEN_Annual_Contract_Payment__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>