force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_ApparatusUnit__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ApparatusUnit__c</fullName>
    <description>This Unit will be used to show Unit as number</description>
    <formula>VALUE(SPEN_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>