force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Auto_Invoice__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Auto_Invoice__c</fullName>
    <defaultValue>&apos;X&apos;</defaultValue>
    <label>Auto Invoice</label>
    <length>5</length>
    <type>Text</type>
</CustomField>