force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Bank_Details__c</fullName>
    <label>Bank Details</label>
    <length>5</length>
    <type>Text</type>
</CustomField>