force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Condition_Currency__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Condition_Currency__c</fullName>
    <defaultValue>&apos;GBP&apos;</defaultValue>
    <label>Condition Currency</label>
    <length>4</length>
    <type>Text</type>
</CustomField>