force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Contracting_With__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Contracting_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracting With</label>
    <referenceTo>SPEN_PartnerAssociation__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>