force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Frequency__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Frequency__c</fullName>
    <defaultValue>&apos;Months&apos;</defaultValue>
    <label>Frequency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>