force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Measuremet_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Measuremet_Type__c</fullName>
    <label>Measuremet Type</label>
    <length>6</length>
    <type>Text</type>
</CustomField>