force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Object__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Object__c</fullName>
    <formula>CASE(TEXT(SPEN_LandInterest__r.SPEN_Job__r.SPEN_LicenseArea__c),
&apos;SPD&apos;, CASE( SPEN_LandInterest__r.SPEN_ConsentType__c , &apos;Wayleave&apos;, &apos;8301/R01/G0000001&apos;, &apos;Servitude&apos;, &apos;8301/R01/G0000001&apos;,&apos;Easement&apos;,&apos;8301/R01/G0000001&apos;,&apos;Lease&apos;,SPEN_LandInterest__r.SPEN_RentalObjectNumber__c,&apos;Closed Couple Lease&apos;,SPEN_LandInterest__r.SPEN_RentalObjectNumber__c,&apos;NWL&apos;,&apos;8301/R01/G0000001&apos;,&apos;&apos;),
&apos;SPT&apos;, CASE( SPEN_LandInterest__r.SPEN_ConsentType__c , &apos;Wayleave&apos;, &apos;8302/R01/G0000001&apos;, &apos;Servitude&apos;, &apos;8302/R01/G0000001&apos;,&apos;Lease&apos;,SPEN_LandInterest__r.SPEN_RentalObjectNumber__c,&apos;Closed Couple Lease&apos;,SPEN_LandInterest__r.SPEN_RentalObjectNumber__c,&apos;NWL&apos;,&apos;8302/R01/G0000001&apos;,&apos;&apos;),
&apos;SPM&apos;, CASE( SPEN_LandInterest__r.SPEN_ConsentType__c , &apos;Wayleave&apos;, &apos;8303/R01/G0000001&apos;,&apos;Easement&apos;,&apos;8303/R01/G0000001&apos;,&apos;Lease&apos;,SPEN_LandInterest__r.SPEN_RentalObjectNumber__c,&apos;Closed Couple Lease&apos;,SPEN_LandInterest__r.SPEN_RentalObjectNumber__c,&apos;NWL&apos;,&apos;8303/R01/G0000001&apos;,&apos;&apos;),
&apos;SPM 132&apos;, CASE( SPEN_LandInterest__r.SPEN_ConsentType__c , &apos;Wayleave&apos;, &apos;8303/R01/G0000001&apos;,&apos;Easement&apos;,&apos;8303/R01/G0000001&apos;,&apos;Lease&apos;,SPEN_LandInterest__r.SPEN_RentalObjectNumber__c,&apos;Closed Couple Lease&apos;,SPEN_LandInterest__r.SPEN_RentalObjectNumber__c,&apos;NWL&apos;,&apos;8303/R01/G0000001&apos;,&apos;&apos;),
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object</label>
    <type>Text</type>
</CustomField>