force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Order__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Order__c</fullName>
    <formula>CASE(TEXT(SPEN_LandInterest__r.SPEN_Job__r.SPEN_LicenseArea__c), 
  &apos;SPD&apos;, &apos;5701669718&apos;, 
  &apos;SPT&apos;, &apos;5701678312&apos;,
  &apos;SPM&apos;, &apos;5701669754&apos;,
  &apos;SPM 132&apos;, &apos;5701669754&apos;,
  &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order</label>
    <type>Text</type>
</CustomField>