force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Payment_Form__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Payment_Form__c</fullName>
    <defaultValue>&apos;0 - In Advance&apos;</defaultValue>
    <label>Payment Form</label>
    <length>20</length>
    <type>Text</type>
</CustomField>