force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Payment_Method__c</fullName>
    <defaultValue>&apos;C&apos;</defaultValue>
    <label>Payment Method</label>
    <length>5</length>
    <type>Text</type>
</CustomField>