force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Payment_Term__c</fullName>
    <defaultValue>&apos;0000&apos;</defaultValue>
    <label>Payment Term</label>
    <length>5</length>
    <type>Text</type>
</CustomField>