force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Planner_Group__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Planner_Group__c</fullName>
    <defaultValue>&apos;MPR&apos;</defaultValue>
    <label>Planner Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>