force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Posting_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Posting_Type__c</fullName>
    <label>Posting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_L_P_Posting_Types</valueSetName>
    </valueSet>
</CustomField>