force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Rental_Only__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Rental_Only__c</fullName>
    <formula>SPEN_Apparatus__r.SPEN_Rental_Only__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rental Only</label>
    <type>Checkbox</type>
</CustomField>