force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Tax_Type__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_L_P_Tax_Types</valueSetName>
    </valueSet>
</CustomField>