force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Tower_Pole_Number__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Tower_Pole_Number__c</fullName>
    <label>Tower /Pole Number(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>