force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Tower_Size_m2__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Tower_Size_m2__c</fullName>
    <label>Tower size (m2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>