force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Unit__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Unit__c</fullName>
    <label>Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>