force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_UnitType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_UnitType__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Object Measurement</fullName>
            </value>
            <value>
                <fullName>% Share in Condition</fullName>
            </value>
            <value>
                <fullName>Differing Measurement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>