force-app/main/default/objects/SPEN_Condition__c/fields/SPEN_Wind_Farm_Stage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Wind_Farm_Stage__c</fullName>
    <defaultValue>&apos;All Phases&apos;</defaultValue>
    <label>Wind Farm Stage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>